Makes Panel Filter not showing on mobiled bug fixed

--- a/src/Pages/Inventory/Components/MakePanel/MakePanel.css
+++ b/src/Pages/Inventory/Components/MakePanel/MakePanel.css
@@ -2,6 +2,9 @@
     position: fixed;
     width: 100%;
     height: 100%;
+    left: 0;
+    top: 0;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,7 +13,7 @@
 }
 
 .makes-panel {
-    margin-bottom: 20em;
+    margin-bottom: 0em;
     width: 25%;
     list-style: none;
     overflow: hidden;
@@ -76,8 +79,15 @@
 }
 
 
-@media (max-width: 900px) {
+@media (min-width: 701px) {
     .makes-panel {
         width: 40%;
+    }
+}
+
+
+@media (min-width: 900px) {
+    .makes-panel {
+        width: 30%;
     }
 }
